.is_sticky #content originally had 205px of padding at the top to prevent some jumping in the layout. You may still need it on this page, but for now, turning this off

--- a/stylesheets/browse.css
+++ b/stylesheets/browse.css
@@ -262,7 +262,7 @@
 */
 
 .is_sticky #content {
-	padding-top: 205px;
+	padding-top: 0;
 }
 
 
